--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,25 @@
 plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2024.2.1"
+    id "com.peterabeles.gversion" version "1.10.2"
+
 }
+
+gversion {
+  srcDir       = "src/main/java/"           // path is relative to the sub-project by default
+                                            // Gradle variables can also be used
+                                            // E.g. "${project.rootDir}/module/src/main/java"
+  classPackage = "frc.robot"
+  className    = "MyVersion"                // optional. If not specified GVersion is used
+  dateFormat   = "yyyy-MM-dd' 'HH:mm" // optional. This is the default
+  timeZone     = "EST"                      // optional. EST
+  debug        = true                      // optional. print out extra debug information
+  language     = "java"                     // optional. Can be Java, Kotlin, YAML, or Properties. Case insensitive.
+  explicitType = false                      // optional. Force types to be explicitly printed
+  indent       = "\t"                       // optional. Change how code is indented. 1 tab is default.
+  annotate     = false                      // optional. Java only. Adds @Generated annotation
+}
+
 
 java {
     sourceCompatibility = JavaVersion.VERSION_17
@@ -99,3 +117,5 @@ wpi.java.configureTestTasks(test)
 tasks.withType(JavaCompile) {
     options.compilerArgs.add '-XDstringConcat=inline'
 }
+
+project.compileJava.dependsOn(createVersionFile)
