--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -2,10 +2,12 @@
   "robotWidth": 0.66,
   "robotLength": 0.66,
   "holonomicMode": true,
-  "pathFolders": [],
+  "pathFolders": [
+    "New Folder"
+  ],
   "autoFolders": [],
-  "defaultMaxVel": 3.0,
-  "defaultMaxAccel": 3.0,
+  "defaultMaxVel": 3.75,
+  "defaultMaxAccel": 3.5,
   "defaultMaxAngVel": 270.0,
   "defaultMaxAngAccel": 270.0,
   "maxModuleSpeed": 4.8
