made some suspicious changes to shoot and do nothing cuz it doesn't work

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -5,7 +5,12 @@
   "pathFolders": [
     "New Folder"
   ],
-  "autoFolders": [],
+  "autoFolders": [
+    "1 piece autons",
+    "2 piece autons",
+    "2.5 piece autons",
+    "3 piece autons"
+  ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 270.0,
